@@ -58,6 +58,9 @@
 .. csv-table:: :url: file:///etc/passwd
 </pre>
 </div>
+<div class="figure">
+<div class="image"><img alt="picture.png" src="picture.png" /></div>
+</div>
 </div>
 </body>
 </html>
